# NSU_OOP

./: README.md
lab0/: CMakeLists.txt  test_empty.txt  test_input.txt  test_large.txt
lab0/src/: main.cpp
lab0/src/core/: WordCounter.cpp  WordCounter.h  WordProcessor.cpp  WordProcessor.h
lab0/src/io/: CSVWriter.cpp  CSVWriter.h  FileReader.cpp  FileReader.h
lab1/: CMakeLists.txt
lab1/src/: bit_array.cpp  bit_array.h  main.cpp  tests.cpp  tests.h
lab2/: CMakeLists.txt
lab2/src/: CommandLineParser.cpp  CommandLineParser.h  main.cpp
lab2/src/PrisonerDilemma/GameClass/: Game.cpp  Game.h
lab2/src/PrisonerDilemma/GameMatrix/: GameMatrix.cpp  GameMatrix.h
lab2/src/PrisonerDilemma/Player/: Player.cpp  Player.h
lab2/src/PrisonerDilemma/factory/: StrategyFactory.h
lab2/src/PrisonerDilemma/strategies/basic_strategy/: Strategy.h
lab2/src/PrisonerDilemma/strategies/basic_strategy/History/: History.cpp  History.h
lab2/src/PrisonerDilemma/strategies/config/AlwaysCooperate/: AlwaysCooperate.cpp  AlwaysCooperate.h
lab2/src/PrisonerDilemma/strategies/config/AlwaysDefect/: AlwaysDefect.cpp  AlwaysDefect.h
lab2/src/PrisonerDilemma/strategies/config/GoByMajority/: GoByMajority.cpp  GoByMajority.h
lab2/src/PrisonerDilemma/strategies/config/RandomChoice/: RandomChoice.cpp  RandomChoice.h
lab2/src/PrisonerDilemma/strategies/config/SoftTitForTat/: SoftTitForTat.cpp  SoftTitForTat.h
lab2/src/PrisonerDilemma/strategies/config/ToughTitForTat/: ToughTitForTat.cpp  ToughTitForTat.h
lab2/src/PrisonerDilemma/tests/: edge_cases_tests.cpp  tests.cpp
lab2/src/PrisonerDilemma/utils/CommandLineParser/: CommandLineParser.cpp  CommandLineParser.h
lab2/src/basic_strategy/: Strategy.h
lab2/src/basic_strategy/History/: History.h
lab2/src/configs/AlwaysCooperate/: AlwaysCooperate.cpp  AlwaysCooperate.h
lab2/src/configs/AlwaysDefect/: AlwaysDefect.cpp  AlwaysDefect.h
lab2/src/configs/GoByMajority/: GoByMajority.cpp  GoByMajority.h
lab2/src/configs/RandomChoice/: RandomChoice.cpp  RandomChoice.h
lab2/src/configs/SoftTitForTat/: SoftTitForTat.cpp  SoftTitForTat.h
lab2/src/configs/ToughTitForTat/: ToughTitForTat.cpp  ToughTitForTat.h
lab2/src/factory/: StrategyFactory.h
lab2/src/utils/CommandLineParser/: CommandLineParser.cpp  CommandLineParser.h
lab2/src/utils/GameMatrix/: GameMatrix.cpp  GameMatrix.h
lab3/: CMakeLists.txt
lab3/src/: main.cpp
lab3/src/SoundProcessor/: SoundProcessor.cpp  SoundProcessor.h
lab3/src/SoundProcessor/Convertion/BasicConverter/: Converter.cpp  Converter.h
lab3/src/SoundProcessor/Convertion/EchoConverter/: EchoConverter.cpp  EchoConverter.h
lab3/src/SoundProcessor/Convertion/Factory/: ConverterFactory.cpp  ConverterFactory.h
lab3/src/SoundProcessor/Convertion/MixConverter/: MixConverter.cpp  MixConverter.h
lab3/src/SoundProcessor/Convertion/MuteConverter/: MuteConverter.cpp  MuteConverter.h
lab3/src/SoundProcessor/Convertion/VolumeConverter/: VolumeConverter.cpp  VolumeConverter.h
lab3/src/SoundProcessor/SoundProcessor/: SoundProcessor.cpp  SoundProcessor.h
lab3/src/SoundProcessor/WorkingWithAudio/: AudioStream.cpp  AudioStream.h  WAVFile.cpp  WAVFile.h  WAVHeader.cpp  WAVHeader.h
lab3/src/SoundProcessor/utils/: ConfigParser.cpp  ConfigParser.h  ConverterCommand.cpp  ConverterCommand.h  Exceptions.h
lab3/src/tests/: Tests.cpp  Tests.h  test_runner.h
lab4/: CMakeLists.txt
lab4/sub_task1/src/: main.cpp
lab4/sub_task2/src/CSVParser/: CSVIterator.h  TupleDetails.h
lab4/sub_task2_Improved/src/: main.cpp
lab4/sub_task2_Improved/src/CSVParser/: CSVIterator.h  Parser.h  TupleDetails.h
